--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--to indicate that we are using html5-->
 <html>
   <head>
   	<!-- to include universal character set... utf-unicode transformation format -->
@@ -27,7 +27,7 @@
       <li> Banana</li>
       <li> Apple</li>
     </ol>
-		<!-- images  --> 
+		<!-- image should have src, alt, and size --> 
     <img src="images/nature.jpg" alt="Nature" style="width:500px;">
 
 
